# django-tasks-demo

./: LICENSE  README.md  pyproject.toml
src/messagecenter/: asgi.py  manage.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
src/messagecenter/dbtasks/: backend.py  base.py  models.py  worker.py
src/messagecenter/dbtasks/management/commands/: dbtasks_purge.py  dbtasks_worker.py
src/messagecenter/dbtasks/migrations/: 0001_initial.py
src/messagecenter/templates/: index.html
